--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -7,8 +7,17 @@
   min-height: 100vh;
 }
 
+.characters {
+  display: flex;
+  flex-direction: column;
+}
+
+.character {
+  display: flex;
+  margin: auto;
+}
+
 .description {
-  display: inherit;
   justify-content: inherit;
   align-items: inherit;
   font-size: 0.85rem;
@@ -97,7 +106,7 @@
 
 .center::before,
 .center::after {
-  content: '';
+  content: "";
   left: 50%;
   position: absolute;
   filter: blur(45px);
